# otomatik-ses-dengeleyici

./: CMakeLists.txt  CONTRIBUTING.md  HIZLI_BASLA.bat  LICENSE  README.md  SECURITY.md  build.bat
docs/: ARCHITECTURE.md
include/: AudioCapture.h  AudioCompressor.h  TrayIcon.h  resource.h
resources/: app.rc
src/: AudioCapture.cpp  AudioCompressor.cpp  TrayIcon.cpp  main.cpp
